--- a/HTML/gamica class 9/home assignment 1/style.css
+++ b/HTML/gamica class 9/home assignment 1/style.css
@@ -20,4 +20,14 @@
  
 }
 
+.heading{
+    color: #6EB5D1;
+    margin-top: 120px;
+    text-align: left;
+    
+}
+html{
+    overflow-x: hidden;
+}
+
 
